Finished Words and People sections

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Palabras"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +27,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PLAY\n",
+      "FILLING\n",
+      "BAR\n",
+      "THEATRE\n",
+      "EASYGOING\n",
+      "DATE\n",
+      "LEAD\n",
+      "THAT\n",
+      "STORY\n",
+      "ISLAND\n"
+     ]
+    }
+   ],
    "source": [
-    "# tu codigo aquí"
+    "# tu codigo aquí\n",
+    "for word in words:\n",
+    "    print(word.upper())"
    ]
   },
   {
@@ -41,11 +62,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['filling', 'theatre', 'easygoing', 'story', 'island']\n"
+     ]
+    }
+   ],
    "source": [
-    "# tu codigo aquí"
+    "# tu codigo aquí\n",
+    "list_of_words_with_five_letters_or_more = [word for word in words if len(word) >= 5]\n",
+    "\n",
+    "print(list_of_words_with_five_letters_or_more)"
    ]
   },
   {
@@ -57,11 +89,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "theatre\n"
+     ]
+    }
+   ],
    "source": [
-    "# tu codigo aquí"
+    "# tu codigo aquí\n",
+    "for word in words:\n",
+    "    if(word[0].lower() == 't'):\n",
+    "        print(word)\n",
+    "        break"
    ]
   },
   {
@@ -121,14 +165,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## People"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,11 +216,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hay 5 personas\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "count = 0\n",
+    "for person in people:\n",
+    "    count += 1\n",
+    "\n",
+    "print(f\"Hay {count} personas.\")"
    ]
   },
   {
@@ -186,11 +245,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hay 4 personas con hijos\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "count = 0\n",
+    "for person in people:\n",
+    "    if(person[\"n_kids\"] >= 1):\n",
+    "        count += 1\n",
+    "\n",
+    "print(f\"Hay {count} personas con hijos/as.\")"
    ]
   },
   {
@@ -202,11 +275,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hay 10 hijos/as en total.\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "count = 0\n",
+    "for person in people:\n",
+    "    count += person[\"n_kids\"]\n",
+    "\n",
+    "print(f\"Hay {count} hijos/as en total.\")"
    ]
   },
   {
@@ -218,11 +304,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Juan', 'age': 34, 'n_kids': 2}, {'name': 'Pepe', 'age': 27, 'n_kids': 0}, {'name': 'Sonia', 'age': 41, 'n_kids': 2}, {'name': 'Lucía', 'age': 22, 'n_kids': 3}, {'name': 'Leo', 'age': 55, 'n_kids': 5}]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "people_in_a_year = []\n",
+    "\n",
+    "for person in people:\n",
+    "    if person[\"name\"][-1].lower() == 'a':\n",
+    "        person[\"n_kids\"] += 1\n",
+    "    people_in_a_year.append(person)\n",
+    "\n",
+    "print(\"Las lista de personas actualizada es:\")\n",
+    "print(people_in_a_year)"
    ]
   }
  ],
@@ -242,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.12"
   },
   "toc": {
    "base_numbering": 1,
